[package]
name = "wordle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
console = "0.15.0"
phf = { version = "0.11.1", features = ["macros"] }

[build-dependencies]
anyhow = "1.0.56"
const-gen = "1.3.0"
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary*
